<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/controls_layout_block"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/camera_flash_switch"
        style="@style/CameraFlashSwitchStyle"
        android:contentDescription="@string/content_description_switch_flash"
        app:layout_constraintBottom_toBottomOf="@id/controls_layout_block"
        app:layout_constraintEnd_toStartOf="@+id/camera_shutter_btn"
        app:layout_constraintStart_toStartOf="@id/controls_layout_block"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flash_off" />


    <ImageButton
        android:id="@+id/camera_shutter_btn"
        style="@style/CameraShutterButtonStyle"
        android:contentDescription="@string/content_description_capture_photo"
        app:layout_constraintBottom_toBottomOf="@id/controls_layout_block"
        app:layout_constraintEnd_toEndOf="@id/controls_layout_block"
        app:layout_constraintStart_toStartOf="@id/controls_layout_block"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/camera_active_view_switch"
        style="@style/CameraActiveSwitchStyle"
        android:contentDescription="@string/content_description_switch_cameras"
        app:layout_constraintBottom_toBottomOf="@id/controls_layout_block"
        app:layout_constraintEnd_toEndOf="@id/controls_layout_block"
        app:layout_constraintStart_toEndOf="@id/camera_shutter_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_camera_rear" />

    <ImageButton
        android:id="@+id/camera_swipe_up_button"
        style="@style/CameraSwipeUpButtonStyle"
        android:contentDescription="@string/content_description_swipe_up_for_image_selection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_shutter_btn"
        app:srcCompat="@drawable/ic_arrow_arc_up" />

</androidx.constraintlayout.widget.ConstraintLayout>